SERVER-7434 Do not spawn a thread in grandparent process when using --fork.